--- a/styles/globals.css
+++ b/styles/globals.css
@@ -18,4 +18,28 @@
     src: url("../public/fonts/Adobe-Caslon-Pro-Regular.ttf");
   }
   
+summary{
+  position: relative;
+}
+  
+  summary::marker {
+    content: "";
+  }
+  summary h2::after {
+    color: #1A4782;
+    content: '\002B';
+    font-size: 20px;
+    position: absolute;
+    top: -8px;
+    right: 69%;
+    transform: rotate(0);
+    transform-origin: .2rem 50%;
+    transition: .6s transform ease;
+  }
+  details[open] summary h2:after {
+    transform: rotate(125deg);
+  }
+  details[open] summary h2{
+    font-style: italic;
+  }
   
