--- a/styles/globals.css
+++ b/styles/globals.css
@@ -40,6 +40,13 @@
   .case_study_details {
     @apply md:text-[21px] text-[18px] font-ITCGaramondStdBold tracking-tighter;
   }
+
+  .servic_list_title {
+    @apply md:text-[13px] text-xs flex justify-between border-y border-black/30 py-2;
+  }
+  .servic_list_title2 {
+    @apply md:text-[13px] text-xs flex justify-between border-b border-black/30 py-2;
+  }
 }
 
 .font-abc-fav {
@@ -68,6 +75,10 @@ p {
 
 summary::marker {
   content: '';
+}
+
+.case_study_details p {
+  font-family: 'ITCGaramondStd-Lt' !important;
 }
 
 .services summary figure::after {
