--- a/styles/globals.css
+++ b/styles/globals.css
@@ -11,6 +11,16 @@
 }
 
 @font-face {
+  font-family: 'ITCGaramondLightCondensed';
+  src: url('../public/fonts/ITCGaramondLightCondensed.woff');
+}
+
+@font-face {
+  font-family: 'ITCGaramondLightCondensedItalic';
+  src: url('../public/fonts/ITCGaramondLightCondensedItalic.woff');
+}
+
+@font-face {
   font-family: 'ITCGaramondStd-Lt';
   src: url('../public/fonts/ITCGaramond.woff');
 }
@@ -104,7 +114,7 @@ summary::marker {
 }
 
 .services details[open] summary h2 {
-  font-style: italic;
+  font-family: 'ITCGaramondLightCondensedItalic';
 }
 
 .slick-dots li.slick-active button:before {
