--- a/styles/globals.css
+++ b/styles/globals.css
@@ -40,7 +40,7 @@
 
 @layer components {
   .service_heading {
-    @apply lg:text-[65px] lg:leading-[78px] md:text-[56px] md:leading-[67px] text-[36px] leading-[43px] font-ITCGaramondStdLight tracking-tighter mr-5 open:italic hover:text-[#1a6683];
+    @apply lg:text-[65px] lg:leading-[78px] md:text-[56px] md:leading-[67px] text-[36px] leading-[43px] font-ITCGaramondStdLight tracking-tighter mr-5 open:italic hover:text-[#1A4782];
   }
 
   .case_slider_heading {
@@ -57,6 +57,9 @@
   .servic_list_title2 {
     @apply md:text-[13px] text-xs flex justify-between border-b border-black/30 py-2;
   }
+}
+body {
+  background-color: #fffff7;
 }
 
 .font-abc-fav {
@@ -88,7 +91,7 @@ summary::marker {
 }
 
 .case_study_details p {
-  font-family: 'ITCGaramondStd-Lt' !important;
+  font-family: 'ITCGaramondLightCondensed' !important;
 }
 
 .servic_list_title2 .price,
