--- a/styles/globals.css
+++ b/styles/globals.css
@@ -42,20 +42,21 @@
   .service_heading {
     @apply lg:text-[65px] lg:leading-[78px] md:text-[56px] md:leading-[67px] text-[36px] leading-[43px] font-ITCGaramondStdLight tracking-tighter mr-5 open:italic hover:text-[#1A4782];
   }
-
   .case_slider_heading {
     @apply font-ITCGaramondStdLight lg:text-[56px] lg:leading-[60px] md:text-[50px] text-[42px] leading-[47px] tracking-tighter max-w-[30rem];
   }
-
   .case_study_details {
     @apply md:text-[21px] text-[18px] font-ITCGaramondStdBold tracking-tighter;
   }
-
   .servic_list_title {
     @apply md:text-[13px] text-xs flex justify-between border-y border-black/30 py-2;
   }
   .servic_list_title2 {
     @apply md:text-[13px] text-xs flex justify-between border-b border-black/30 py-2;
+  }
+
+  .service_heading_border {
+    @apply pt-[1px]  bg-[#000];
   }
 }
 body {
