--- a/styles/globals.css
+++ b/styles/globals.css
@@ -6,11 +6,6 @@
 @tailwind utilities;
 
 @font-face {
-  font-family: 'ITCGaramondStd-Bd';
-  src: url('../public/fonts/ITCGaramond.woff');
-}
-
-@font-face {
   font-family: 'ITCGaramondLightCondensed';
   src: url('../public/fonts/ITCGaramondLightCondensed.woff');
 }
@@ -18,11 +13,6 @@
 @font-face {
   font-family: 'ITCGaramondLightCondensedItalic';
   src: url('../public/fonts/ITCGaramondLightCondensedItalic.woff');
-}
-
-@font-face {
-  font-family: 'ITCGaramondStd-Lt';
-  src: url('../public/fonts/ITCGaramond.woff');
 }
 
 @font-face {
@@ -40,13 +30,13 @@
 
 @layer components {
   .service_heading {
-    @apply lg:text-[65px] lg:leading-[78px] md:text-[56px] md:leading-[67px] text-[36px] leading-[43px] font-ITCGaramondStdLight tracking-tighter mr-5 open:italic hover:text-[#1A4782];
+    @apply lg:text-[65px] lg:leading-[78px] md:text-[56px] md:leading-[67px] text-[36px] leading-[43px] font-ITCGaramondLightCondensed tracking-tighter mr-5 open:italic hover:text-[#1A4782];
   }
   .case_slider_heading {
-    @apply font-ITCGaramondStdLight lg:text-[56px] lg:leading-[60px] md:text-[50px] text-[42px] leading-[47px] tracking-tighter max-w-[30rem];
+    @apply font-ITCGaramondLightCondensed lg:text-[56px] lg:leading-[60px] md:text-[50px] text-[42px] leading-[47px] tracking-tighter max-w-[30rem];
   }
   .case_study_details {
-    @apply md:text-[21px] text-[18px] font-ITCGaramondStdBold tracking-tighter;
+    @apply md:text-[21px] text-[18px] font-ITCGaramondLightCondensed tracking-tighter;
   }
   .servic_list_title {
     @apply md:text-[13px] text-xs flex justify-between border-y border-black/30 py-2;
