--- a/styles/globals.css
+++ b/styles/globals.css
@@ -48,6 +48,10 @@
   .service_heading_border {
     @apply pt-[1px]  bg-[#000];
   }
+
+  .service_active_image_active {
+    @apply absolute bg-[#1A4781] top-0 right-0 left-0 bottom-1;
+  }
 }
 body {
   background-color: #fffff7;
