--- a/styles/globals.css
+++ b/styles/globals.css
@@ -54,7 +54,7 @@
   }
 
   .mobilemenu_link {
-    @apply mx-4 font-ITCGaramondLightCondensed;
+    @apply mx-4 lg:font-ABCFavoritEdu font-ITCGaramondLightCondensed;
   }
 }
 body {
