--- a/styles/globals.css
+++ b/styles/globals.css
@@ -5,6 +5,11 @@
 @tailwind components;
 @tailwind utilities;
 
+body,
+html {
+  scroll-behavior: smooth;
+}
+
 @font-face {
   font-family: 'ITCGaramondLightCondensed';
   src: url('../public/fonts/ITCGaramondLightCondensed.woff');
